CHANGELOG 05 February 2008 Scott Cytacki
1. Moved implementation classes into a impl package.  This paves the way for further
  refactoring. By putting all the jmdns api classes and interfaces in one package, the impl 
  classes can be split up more without exposing public classes and methods that aren't 
  part of the jmdns api.   This change breaks the old api, because the JmDNS and ServiceInfo
  classes cannot be instanciated directly.  Instead there are factory methods to create them.

CHANGELOG 01 February 2008 Scott Cytacki
1. Fixed an error in the way ServiceInfo was constructing the text array for the TXT
  record.  The length byte was being omitted if the ServiceInfo constructor was called
  with the last argument of a String.  Added better handling of unsupported dns label
  types.  The Apple Bonjour conformance test sends SRV records with target strings that 
  have lengths longer than 63, so the top 2 bits get used.

CHANGELOG 25 January 2008 Scott Cytacki
1. Consolidated most places where the ServiceInfo object was turned into a set of dns records.  
  And most places where the localHost (HostInfo) object was turned into dns records.
  There is still one place that is duplicated (JmDNS.Responder) because it adds the dns records 
  to a list first, removes known answers, and finally adds them to DNSOutgoing.  

CHANGELOG 17 January 2008 Scott Cytacki
1. Added eclipse project files.  Forced the eclipse project to use java 1.4

2. Changed the eclipse project to store built files in eclipse-lib because lib was already
   being used.

3. Added eclipse code formating configuration files. They should match follow the turbine 
coding standards which have been used in this project: http://turbine.apache.org/common/code-standards.html
Also this includes a minor formating clean up of JmDNS class.

4. Changed Logger.getLogger parameter to use class.getName instead of class.toString. This is because