@@ -1,3 +1,13 @@
+CHANGELOG 06 February 2008 Scott Cytacki
+1. Added code to make it easier to debug communication with other mdns implementations.
+  Including: 
+    - keeping track of the the address which sent a dns record
+    - flag to turning off domain-name compression
+    - flag to use non domain-name format for targets of SRV records
+    - checks for conflicts from our own source address.    
+  Added the UNIQUE flag which is referred to the "cache flush bit" by the spec, on SRV
+  and TXT records sent to announce a Service.  
+
 CHANGELOG 05 February 2008 Scott Cytacki
 1. Moved implementation classes into a impl package.  This paves the way for further
   refactoring. By putting all the jmdns api classes and interfaces in one package, the impl 
